--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.3.0",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2"
